structmeta-tests/tests/compile_fail/to_tokens/mismatch_surround.rs
use structmeta::ToTokens;
use syn::LitStr;
#[derive(ToTokens)]
struct TestType {
    #[to_tokens("(")]
    braket_token: syn::token::Bracket,
    str: LitStr,
}

fn main() {}
